[package]
name = "dest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
rand = { version = "0.9.1", features = ["small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full", "rt", "rt-multi-thread"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lib]
name = "simulation_testing"
path = "./src/lib.rs"

[[bin]]
name = "simulation_testing_bin"
path = "./src/main.rs"
